tests/snapshots/test__tests__minimal_case-2.snap
---
source: tests/test.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    union: U16U16U32U32U32(
        EngineBase {
            grammar: Grammar {
                start_nonterminal: "start[0]",
                rules: "start[0] ::= \"aaa\"[0];\n",
                id_to_regexes: {},
                id_to_suffix_automata: {},
                id_to_suffix_automata_first_bytes: [],
                id_to_regex_first_bytes: [],
                id_to_regex_complement_first_bytes: [],
                id_to_terminals: [
                    (
                        "\"aaa\"[0]",
                        [
                            97,
                            97,
                            97,
                        ],
                    ),
                ],
            },
            allowed_first_bytes: [
                97,
            ],
            allowed_token_ids: [
                "a[98]",
                "aa[1733]",
            ],
            earley_sets: [
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> .\"aaa\"[0]",
                        start_position: 0,
                        state: "[0]",
                    },
                ],
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> .\"aaa\"[0]",
                        start_position: 0,
                        state: "[1]",
                    },
                ],
            ],
            cache: [
                (
                    [
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .\"aaa\"[0]",
                                start_position: 0,
                                state: "[0]",
                            },
                        ],
                    ],
                    (
                        [
                            "a[98]",
                            "aa[1733]",
                            "aaa[6885]",
                        ],
                    ),
                ),
                (
                    [
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .\"aaa\"[0]",
                                start_position: 0,
                                state: "[0]",
                            },
                        ],
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .\"aaa\"[0]",
                                start_position: 0,
                                state: "[1]",
                            },
                        ],
                    ],
                    (
                        [
                            "a[98]",
                            "aa[1733]",
                        ],
                    ),
                ),
            ],
            to_be_completed_items: [],
            to_be_completed_items_buffer: [],
            deduplication_buffer: [],
            postdot_items: [],
            postdot_items_since_last_commit: [],
            leo_items: [],
            leo_items_buffer: [],
            finished: false,
            config: EngineConfig {
                cache_enabled: true,
                compaction_enabled: true,
            },
        },
    ),
}
