tests/snapshots/test__tests__right_recursion.snap
---
source: tests/test.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    union: U16U0U16U32U32U32(
        EngineBase {
            grammar: Grammar {
                start_nonterminal: "start[0]",
                rules: "start[0] ::= C[1]\"\n\"[0] | ;\nC[1] ::= #\"c\"[0]C[1] | \"c\"[1];\n",
                id_to_regexes: {
                    "#\"c\"[0]": Dfa(
                        dense::DFA(
                        D 000000: 
                        Q 000004: 
                         *000008: 
                          000012: \x01 => 16
                          000016: \x00-\x02 => 8, EOI => 8
                        
                        START-GROUP(unanchored)
                          NonWordByte => 000000
                          WordByte => 000000
                          Text => 000000
                          LineLF => 000000
                          LineCR => 000000
                          CustomLineTerminator => 000000
                        START-GROUP(anchored)
                          NonWordByte => 000012
                          WordByte => 000012
                          Text => 000012
                          LineLF => 000012
                          LineCR => 000012
                          CustomLineTerminator => 000012
                        state length: 5
                        pattern length: 1
                        flags: Flags { has_empty: false, is_utf8: true, is_always_start_anchored: false }
                        )
                        ,
                    ),
                },
                id_to_excepteds: {},
                id_to_regex_first_bytes: [
                    (
                        "#\"c\"[0]",
                        StateID(
                            4,
                        ),
                        [],
                    ),
                    (
                        "#\"c\"[0]",
                        StateID(
                            12,
                        ),
                        [
                            99,
                        ],
                    ),
                    (
                        "#\"c\"[0]",
                        StateID(
                            0,
                        ),
                        [],
                    ),
                    (
                        "#\"c\"[0]",
                        StateID(
                            16,
                        ),
                        [
                            0,
                            1,
                            2,
                            3,
                            4,
                            5,
                            6,
                            7,
                            8,
                            9,
                            10,
                            11,
                            12,
                            13,
                            14,
                            15,
                            16,
                            17,
                            18,
                            19,
                            20,
                            21,
                            22,
                            23,
                            24,
                            25,
                            26,
                            27,
                            28,
                            29,
                            30,
                            31,
                            32,
                            33,
                            34,
                            35,
                            36,
                            37,
                            38,
                            39,
                            40,
                            41,
                            42,
                            43,
                            44,
                            45,
                            46,
                            47,
                            48,
                            49,
                            50,
                            51,
                            52,
                            53,
                            54,
                            55,
                            56,
                            57,
                            58,
                            59,
                            60,
                            61,
                            62,
                            63,
                            64,
                            65,
                            66,
                            67,
                            68,
                            69,
                            70,
                            71,
                            72,
                            73,
                            74,
                            75,
                            76,
                            77,
                            78,
                            79,
                            80,
                            81,
                            82,
                            83,
                            84,
                            85,
                            86,
                            87,
                            88,
                            89,
                            90,
                            91,
                            92,
                            93,
                            94,
                            95,
                            96,
                            97,
                            98,
                            99,
                            100,
                            101,
                            102,
                            103,
                            104,
                            105,
                            106,
                            107,
                            108,
                            109,
                            110,
                            111,
                            112,
                            113,
                            114,
                            115,
                            116,
                            117,
                            118,
                            119,
                            120,
                            121,
                            122,
                            123,
                            124,
                            125,
                            126,
                            127,
                            128,
                            129,
                            130,
                            131,
                            132,
                            133,
                            134,
                            135,
                            136,
                            137,
                            138,
                            139,
                            140,
                            141,
                            142,
                            143,
                            144,
                            145,
                            146,
                            147,
                            148,
                            149,
                            150,
                            151,
                            152,
                            153,
                            154,
                            155,
                            156,
                            157,
                            158,
                            159,
                            160,
                            161,
                            162,
                            163,
                            164,
                            165,
                            166,
                            167,
                            168,
                            169,
                            170,
                            171,
                            172,
                            173,
                            174,
                            175,
                            176,
                            177,
                            178,
                            179,
                            180,
                            181,
                            182,
                            183,
                            184,
                            185,
                            186,
                            187,
                            188,
                            189,
                            190,
                            191,
                            192,
                            193,
                            194,
                            195,
                            196,
                            197,
                            198,
                            199,
                            200,
                            201,
                            202,
                            203,
                            204,
                            205,
                            206,
                            207,
                            208,
                            209,
                            210,
                            211,
                            212,
                            213,
                            214,
                            215,
                            216,
                            217,
                            218,
                            219,
                            220,
                            221,
                            222,
                            223,
                            224,
                            225,
                            226,
                            227,
                            228,
                            229,
                            230,
                            231,
                            232,
                            233,
                            234,
                            235,
                            236,
                            237,
                            238,
                            239,
                            240,
                            241,
                            242,
                            243,
                            244,
                            245,
                            246,
                            247,
                            248,
                            249,
                            250,
                            251,
                            252,
                            253,
                            254,
                        ],
                    ),
                    (
                        "#\"c\"[0]",
                        StateID(
                            8,
                        ),
                        [],
                    ),
                ],
                id_to_excepted_first_bytes: [],
                id_to_terminals: [
                    (
                        "\"\n\"[0]",
                        [
                            10,
                        ],
                    ),
                    (
                        "\"c\"[1]",
                        [
                            99,
                        ],
                    ),
                ],
            },
            allowed_first_bytes: [],
            allowed_token_ids: [],
            earley_sets: [
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> .C[1]\"\n\"[0]",
                        start_position: 0,
                        state: "",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "C[1] -> .#\"c\"[0]C[1]",
                        start_position: 0,
                        state: "[3(InProgress)]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "C[1] -> .\"c\"[1]",
                        start_position: 0,
                        state: "[0]",
                    },
                ],
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "C[1] -> .#\"c\"[0]C[1]",
                        start_position: 0,
                        state: "[2(InProgress)]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "C[1] -> #\"c\"[0].C[1]",
                        start_position: 0,
                        state: "",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "C[1] -> .#\"c\"[0]C[1]",
                        start_position: 0,
                        state: "[4(Accept)]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> C[1].\"\n\"[0]",
                        start_position: 0,
                        state: "[0]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "C[1] -> .#\"c\"[0]C[1]",
                        start_position: 1,
                        state: "[3(InProgress)]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "C[1] -> .\"c\"[1]",
                        start_position: 1,
                        state: "[0]",
                    },
                ],
            ],
            cache: [],
            to_be_completed_items: [],
            to_be_completed_items_buffer: [],
            deduplication_buffer: [],
            postdot_items: [
                (
                    DottedDebugStruct {
                        postdot_nonterminal: "C[1]",
                        column: 0,
                    },
                    NormalItems(
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .C[1]\"\n\"[0]",
                                start_position: 0,
                                state: "",
                            },
                        ],
                    ),
                ),
                (
                    DottedDebugStruct {
                        postdot_nonterminal: "C[1]",
                        column: 1,
                    },
                    LeoEligible(
                        EarleyItemDebugStruct {
                            dotted_rule: "C[1] -> #\"c\"[0].C[1]",
                            start_position: 0,
                            state: "",
                        },
                    ),
                ),
            ],
            postdot_items_since_last_commit: [],
            leo_items: [],
            leo_items_buffer: [],
            already_predicted_nonterminals: [],
            finished: false,
            config: EngineConfig {
                cache_enabled: true,
                compaction_enabled: true,
            },
            regex_start_config: Config {
                look_behind: None,
                anchored: Yes,
            },
            excepted_start_config: Config {
                look_behind: None,
                anchored: No,
            },
        },
    ),
}
